# algorithmic_trading

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  NOTICE  NOTICE.txt  README.md  SECURITY.md  pyproject.toml
.github/: CONTRIBUTING.md
bot/: run.py
docs/: Agent.md
src/backend/: routes.py  services.py
src/backtest/: engine.py  execution.py
src/backtesting/: metrics.py  run_backtest.py
src/bot/: execution.py  regression_strategy.py  run.py  strategy.py
src/common/: calendar.py  config.py  logging.py  types.py
src/data/: __init__.py  ibkr.py  storage.py  yahoo.py
src/ml/: models.py
src/quantbot/data/: yahoo.py
